# Sarvam-cli

./: README.md  pyproject.toml
src/sarvam_cli/: api.py  audio.py  cli.py  config.py  ui.py
src/sarvam_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_e2e.py
